--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "7.17.1",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1"
