--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.4.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "firebase": "7.17.1",
+    "framer-motion": "^4",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1"
