--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^4",
     "next": "10.0.9",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-hook-form": "^7.0.0"
   }
 }
